0.2
---

- Items schema:  price field is now a sequence of WebsitePrice.
    [("de_website", 1)] instead of {default: 1, "websites": [("de_website", 1)]}

- Update items: you cannot update the sku field anymore 


0.1
---

-  Initial version