@@ -1,13 +1,70 @@
+from collections import Counter
+
 ###################
 # base validators #
 ###################
+
+def validate_key_unique(data_key, key,  request):
+    appstructs = request.validated[data_key]
+    values = [x[key] for x in appstructs if key in x]
+    values_nonunique = [x for x, y in Counter(values).items() if y > 1]
+
+    error = 'The following %s are not unique: %s'
+    if values_nonunique:
+        request.errors.add('body', key, error % (key, str(values_nonunique)))
+
+
+def validate_key_does_not_exists(data_key, key, request):
+    appstructs = request.validated[data_key]
+    values = set([i[key] for i in appstructs if key in i])
+    existing_folder = request.root.app_root[data_key]
+    existing = set([x[key] for x in existing_folder.values() if key in x])
+    already_exists = existing.intersection(values)
+
+    error = 'The following %s do already exists in %s: %s'
+    if already_exists:
+        request.errors.add('body', key,
+                           error % (key, data_key,
+                                    [x for x in already_exists].__str__()))
+
+
+def _expand_titles(appstructs):
+    for x in appstructs:
+        if "default" in x: yield x["default"]
+        if "fr" in x: yield x["fr"]
+        if "en" in x: yield x["en"]
+        if "it" in x: yield x["it"]
+        if "de" in x: yield x["de"]
+
+
+def validate_title_unique(data_key,  request):
+    appstructs = request.validated[data_key]
+    titles = _expand_titles([x["title"] for x in appstructs if "title" in x])
+    titles_nonunique = [x for x, y in Counter(titles).items() if y > 1]
+
+    error = 'The following titles are not unique: %s'
+    if titles_nonunique:
+        request.errors.add('body', "title", error % (str(titles_nonunique)))
+
+
+def validate_title_does_not_exists(data_key,  request):
+    appstructs = request.validated[data_key]
+    titles = _expand_titles([x["title"] for x in appstructs if "title" in x])
+    existing_folder = request.root.app_root[data_key]
+    existing_titles = set(_expand_titles([x["title"] for x in
+                                          existing_folder.values()]))
+    already_exists = existing_titles.intersection(titles)
+
+    error = 'The following titles do already exists in %s: %s'
+    if already_exists:
+        request.errors.add('body', "title", error % (data_key,
+                                    [x for x in already_exists].__str__()))
 
 
 def validate_id_does_not_exists(data_key, request):
     entities = request.validated[data_key]
     entity_ids = set([i["id"] for i in entities])
-    app_root = request.root.app_root
-    existing_folder = app_root[data_key]
+    existing_folder = request.root.app_root[data_key]
     existing = set(existing_folder.keys())
     already_exists = existing.intersection(entity_ids)
 
@@ -21,8 +78,7 @@ def validate_id_does_not_exists(data_key, request):
 def validate_id_does_exists(data_key, request):
     entities = request.validated[data_key]
     entity_ids = set([i["id"] for i in entities])
-    app_root = request.root.app_root
-    existing_folder = app_root[data_key]
+    existing_folder = request.root.app_root[data_key]
     existing = set(existing_folder.keys())
     not_existing = entity_ids.difference(existing)
 
@@ -53,12 +109,20 @@ def validate_no_reference_ids_exist(data_key, data_key_refs,
 #######################
 
 
+def validate_category_id_unique(request):
+    validate_key_unique("categories", "id", request)
+
+
 def validate_category_id_does_not_exists(request):
     validate_id_does_not_exists("categories", request)
 
 
-def validate_category_id_does_exists(request):
-    validate_id_does_exists("categories", request)
+def validate_category_title_unique(request):
+    validate_title_unique("categories", request)
+
+
+def validate_category_title_does_not_exists(request):
+    validate_title_does_not_exists("categories", request)
 
 
 def validate_category_parent_id(request):
@@ -89,9 +153,20 @@ def validate_no_item_group_references_exist(request):
 # /item_groups service #
 ########################
 
+def validate_item_group_id_unique(request):
+    validate_key_unique("item_groups", "id", request)
+
 
 def validate_item_group_id_does_not_exists(request):
     validate_id_does_not_exists("item_groups", request)
+
+
+def validate_item_group_title_unique(request):
+    validate_title_unique("item_groups", request)
+
+
+def validate_item_group_title_does_not_exists(request):
+    validate_title_does_not_exists("item_groups", request)
 
 
 def validate_item_group_parent_id(request):
@@ -116,6 +191,10 @@ def validate_item_group_no_item_references_exist(request):
 #############################
 
 
+def validate_unit_of_measure_id_unique(request):
+    validate_key_unique("unit_of_measures", "id", request)
+
+
 def validate_unit_of_measure_id_does_not_exists(request):
     validate_id_does_not_exists("unit_of_measures", request)
 
@@ -125,9 +204,14 @@ def validate_unit_of_measure_no_item_references_exist(request):
                                     "unit_of_measure_id", request)
 
 
+
 ######################
 # /vpe_types service #
 ######################
+
+
+def validate_vpe_type_id_unique(request):
+    validate_key_unique("vpe_types", "id", request)
 
 
 def validate_vpe_type_id_does_not_exists(request):
@@ -143,8 +227,30 @@ def validate_vpe_type_no_item_references_exist(request):
 ##################
 
 
-def validate_item_id_does_not_exists(request):
+def validate_items_id_unique(request):
+    validate_key_unique("items", "id", request)
+
+
+def validate_items_id_does_not_exists(request):
     validate_id_does_not_exists("items", request)
+
+
+def validate_items_sku_unique(request):
+    validate_key_unique("items", "sku", request)
+
+
+def validate_items_sku_does_not_exists(request):
+    validate_key_does_not_exists("items", "sku", request)
+    validate_key_does_not_exists("item_groups", "sku", request)
+
+
+def validate_items_title_unique(request):
+    validate_title_unique("items", request)
+
+
+def validate_items_title_does_not_exists(request):
+    validate_title_does_not_exists("items", request)
+    validate_title_does_not_exists("item_groups", request)
 
 
 def validate_item_id_does_exists(request):
