@@ -1,6 +1,8 @@
 0.2
 ---
 
+- Items schema: title field/title translations have to be unique
+
 - Items schema:  price field is now a sequence of WebsitePrice.
     [("de_website", 1)] instead of {default: 1, "websites": [("de_website", 1)]}
 
